microserv-billing/src/main/java/org/example/microservbilling/error/dto/MessageDTO.java
package org.example.microservbilling.error.dto;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@AllArgsConstructor
@NoArgsConstructor
@Builder
public class MessageDTO {
    private String message;
    private String details;
    private HttpStatus status;
}
